<?xml version="1.0"?>
<project
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>audit-service</artifactId>
  <groupId>com.octopus</groupId>
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>content-team-apps</artifactId>
    <groupId>com.octopus</groupId>
    <version>1.0</version>
  </parent>
  <build>
    <finalName>audit-service</finalName>
    <plugins>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <configuration>
          <configLocation>google_checks.xml</configLocation>
          <consoleOutput>true</consoleOutput>
          <encoding>UTF-8</encoding>
          <failOnViolation>true</failOnViolation>
          <failsOnError>true</failsOnError>
          <linkXRef>false</linkXRef>
          <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
          <violationSeverity>warning</violationSeverity>
        </configuration>
        <dependencies>
          <dependency>
            <artifactId>checkstyle</artifactId>
            <groupId>com.puppycrawl.tools</groupId>
            <version>9.0</version>
          </dependency>
        </dependencies>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.1.2</version>
      </plugin>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <id>prepare-agent</id>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>report</id>
            <phase>test</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>0.8.7</version>
      </plugin>
      <plugin>
        <artifactId>cyclonedx-maven-plugin</artifactId>
        <groupId>org.cyclonedx</groupId>
        <version>2.5.3</version>
      </plugin>
      <plugin>
        <artifactId>quarkus-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>build</goal>
              <goal>generate-code</goal>
              <goal>generate-code-tests</goal>
            </goals>
          </execution>
        </executions>
        <extensions>true</extensions>
        <groupId>${quarkus.platform.group-id}</groupId>
        <version>${quarkus.platform.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <parameters>${maven.compiler.parameters}</parameters>
        </configuration>
        <version>${compiler-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <systemPropertyVariables>
            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            <maven.home>${maven.home}</maven.home>
          </systemPropertyVariables>
        </configuration>
        <version>${surefire-plugin.version}</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>jsonapi-converter</artifactId>
      <groupId>com.github.jasminb</groupId>
      <version>0.11</version>
    </dependency>
    <dependency>
      <artifactId>rsql-jpa</artifactId>
      <groupId>com.github.tennaito</groupId>
      <version>2.0.2</version>
    </dependency>
    <dependency>
      <artifactId>aws-lambda-java-events</artifactId>
      <groupId>com.amazonaws</groupId>
      <version>3.10.0</version>
    </dependency>
    <dependency>
      <artifactId>joda-time</artifactId>
      <groupId>joda-time</groupId>
      <version>2.10.13</version>
    </dependency>
    <dependency>
      <artifactId>guava</artifactId>
      <groupId>com.google.guava</groupId>
      <version>31.0.1-jre</version>
    </dependency>
    <dependency>
      <artifactId>commons-text</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>1.9</version>
    </dependency>
    <dependency>
      <artifactId>quarkus-jdbc-h2</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-jdbc-mysql</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-liquibase</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-resteasy-reactive</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-arc</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-hibernate-orm</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-rest-client-reactive-jackson</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-hibernate-envers</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-amazon-lambda</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-hibernate-validator</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <artifactId>quarkus-core-deployment</artifactId>
      <groupId>io.quarkus</groupId>
    </dependency>
    <dependency>
      <groupId>com.nimbusds</groupId>
      <artifactId>nimbus-jose-jwt</artifactId>
      <version>9.18</version>
    </dependency>
    <dependency>
      <artifactId>quarkus-junit5</artifactId>
      <groupId>io.quarkus</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>quarkus-junit5-mockito</artifactId>
      <groupId>io.quarkus</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>rest-assured</artifactId>
      <groupId>io.rest-assured</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>${quarkus.platform.artifact-id}</artifactId>
        <groupId>${quarkus.platform.group-id}</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${quarkus.platform.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <profiles>
    <profile>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <executions>
              <execution>
                <configuration>
                  <systemPropertyVariables>
                    <java.util.logging.manager>org.jboss.logmanager.LogManager
                    </java.util.logging.manager>
                    <maven.home>${maven.home}</maven.home>
                    <native.image.path>
                      ${project.build.directory}/${project.build.finalName}-runner
                    </native.image.path>
                  </systemPropertyVariables>
                </configuration>
                <goals>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
              </execution>
            </executions>
            <version>${surefire-plugin.version}</version>
          </plugin>
        </plugins>
      </build>
      <id>native</id>
      <properties>
        <quarkus.package.type>native</quarkus.package.type>
      </properties>
    </profile>
  </profiles>
  <properties>
    <compiler-plugin.version>3.8.1</compiler-plugin.version>
    <maven.compiler.parameters>true</maven.compiler.parameters>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
    <quarkus.platform.version>2.7.1.Final</quarkus.platform.version>
    <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
  </properties>
  <version>0.0.1-SNAPSHOT</version>
</project>
